@@ -43,6 +43,7 @@ include __DIR__ . '/Helpers/RoutingNothing.php';
 include __DIR__ . '/Helpers/RenderNothing.php';
 include __DIR__ . '/Helpers/ConfigSupplier.php';
 
+include __DIR__ . '/Fixtures/TraitFixture.php';
 include __DIR__ . '/Fixtures/SimpleFixture.php';
 include __DIR__ . '/Fixtures/TraversableFixture.php';
 include __DIR__ . '/Fixtures/DebugMethodFixture.php';
